--- a/src/main/resources/templates/client/shopping-page.html
+++ b/src/main/resources/templates/client/shopping-page.html
@@ -12,13 +12,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
           integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-            integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-            crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-            integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-            crossorigin="anonymous"></script>
     <link rel="stylesheet" th:href="@{/css/shopping.css}"/>
+    <style>
+        .card-img-top {
+            width: 100%;
+            height: 15vw;
+            object-fit: cover;
+        }
+    </style>
 </head>
 
 <body>
@@ -45,15 +46,27 @@
             </div>
         </div>
     </div>
-    <ul class="pagination d-inline-block p-2 text-dark" th:if="${productPage.totalPages > 0}"
-        th:each="pageNumber : ${pageNumbers}">
-        <li class="page-item">
-            <a class="page-link" th:href="@{/shopping(size=${productPage.size}, page=${pageNumber})}"
-               th:text="${pageNumber}"
-               th:class="${pageNumber==productPage.number + 1} ? active : '' ">
-            </a>
+</div>
+<nav aria-label="Page navigation example">
+    <ul class="pagination justify-content-center" th:if="${productPage.totalPages > 0}">
+        <li th:class="${productPage.number == 0} ? 'page-item disabled' : 'page-item'">
+            <a class="page-link" th:href="@{/shopping(size=${productPage.size}, page=0)}">First</a>
+        </li>
+        <li th:each="pageNumber : ${pageNumbers}"
+            th:class="${pageNumber == productPage.number + 1} ? 'page-item active' : 'page-item'">
+            <a class="page-link" th:href="@{/shopping(size=${productPage.size}, page=${pageNumber})}" th:text="${pageNumber}"></a>
+        </li>
+        <li th:class="${productPage.number == productPage.totalPages - 1} ? 'page-item disabled' : 'page-item'">
+            <a class="page-link" th:href="@{/shopping(size=${productPage.size}, page=${productPage.totalPages - 1})}">Last</a>
         </li>
     </ul>
-</div>
+</nav>
+
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+        crossorigin="anonymous"></script>
 </body>
 </html>
