add function checkout,cart, and chart

--- a/src/main/resources/templates/admin/admin-page.html
+++ b/src/main/resources/templates/admin/admin-page.html
@@ -31,7 +31,7 @@
                 <div class="col-md-3">
                     <div class="p-3 bg-white shadow-sm d-flex justify-content-around align-items-center rounded">
                         <div>
-                            <h3 class="fs-2">720</h3>
+                            <h3 th:text="${sizeProduct}" class="fs-2"></h3>
                             <p class="fs-5">Products</p>
                         </div>
                         <i class="fas fa-gift fs-1 primary-text border rounded-full secondary-bg p-3"></i>
@@ -41,8 +41,8 @@
                 <div class="col-md-3">
                     <div class="p-3 bg-white shadow-sm d-flex justify-content-around align-items-center rounded">
                         <div>
-                            <h3 class="fs-2">4920</h3>
-                            <p class="fs-5">Sales</p>
+                            <h3 class="fs-2" th:text="${sizeOrder}"></h3>
+                            <p class="fs-5">Order</p>
                         </div>
                         <i
                                 class="fas fa-hand-holding-usd fs-1 primary-text border rounded-full secondary-bg p-3"></i>
@@ -52,10 +52,10 @@
                 <div class="col-md-3">
                     <div class="p-3 bg-white shadow-sm d-flex justify-content-around align-items-center rounded">
                         <div>
-                            <h3 class="fs-2">3899</h3>
-                            <p class="fs-5">Delivery</p>
+                            <h3 class="fs-2" th:text="${customerRepository.count()}"></h3>
+                            <p class="fs-5">Customer</p>
                         </div>
-                        <i class="fas fa-truck fs-1 primary-text border rounded-full secondary-bg p-3"></i>
+                        <i class="fas fa-users fs-1 primary-text border rounded-full secondary-bg p-3"></i>
                     </div>
                 </div>
 
@@ -76,87 +76,23 @@
                     <table class="table bg-white rounded shadow-sm  table-hover">
                         <thead>
                         <tr>
-                            <th scope="col" width="50">#</th>
-                            <th scope="col">Product</th>
+                            <th scope="col">Date</th>
+                            <th scope="col">Employee</th>
                             <th scope="col">Customer</th>
-                            <th scope="col">Price</th>
+                            <th>Price</th>
                         </tr>
                         </thead>
                         <tbody>
-                        <tr>
-                            <th scope="row">1</th>
-                            <td>Television</td>
-                            <td>Jonny</td>
-                            <td>$1200</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">2</th>
-                            <td>Laptop</td>
-                            <td>Kenny</td>
-                            <td>$750</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">3</th>
-                            <td>Cell Phone</td>
-                            <td>Jenny</td>
-                            <td>$600</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">4</th>
-                            <td>Fridge</td>
-                            <td>Killy</td>
-                            <td>$300</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">5</th>
-                            <td>Books</td>
-                            <td>Filly</td>
-                            <td>$120</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">6</th>
-                            <td>Gold</td>
-                            <td>Bumbo</td>
-                            <td>$1800</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">7</th>
-                            <td>Pen</td>
-                            <td>Bilbo</td>
-                            <td>$75</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">8</th>
-                            <td>Notebook</td>
-                            <td>Frodo</td>
-                            <td>$36</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">9</th>
-                            <td>Dress</td>
-                            <td>Kimo</td>
-                            <td>$255</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">10</th>
-                            <td>Paint</td>
-                            <td>Zico</td>
-                            <td>$434</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">11</th>
-                            <td>Carpet</td>
-                            <td>Jeco</td>
-                            <td>$1236</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">12</th>
-                            <td>Food</td>
-                            <td>Haso</td>
-                            <td>$422</td>
-                        </tr>
+                            <tr th:each="order : ${orderPage.content}">
+                                <td th:text="${#temporals.format(order.orderDate, 'dd-MMM-yyyy')}"></td>
+                                <td th:text="${employeeRepository.findNameEmployee(order.employee.id)}"></td>
+                                <td th:text="${customerRepository.findNameCustomer(order.customer.id)}"></td>
+<!--                                <td th:text="${'$ ' + #numbers.formatDecimal(orderDetailRepository.getTotalPriceOfOrder(order.orderId),3,'POINT',2,'COMMA').isEmpty() ? 0 : }"></td>-->
+                                <td th:text="${orderDetailRepository.getTotalPriceOfOrder(order.orderId) == null ? '0' : #numbers.formatDecimal(orderDetailRepository.getTotalPriceOfOrder(order.orderId), 3, 'POINT', 2, 'COMMA')}"></td>
+                            </tr>
                         </tbody>
                     </table>
+                    <nav th:replace="~{components/pagination :: pagination(${orderPage},${control},${pageNumbers})}"></nav>
                 </div>
             </div>
 
