--- a/src/main/resources/templates/client/cart-detail.html
+++ b/src/main/resources/templates/client/cart-detail.html
@@ -173,7 +173,7 @@
                                             </div>
 
                                             <div class="form-outline form-white mb-4">
-                                                <input type="text" id="typeText" class="form-control form-control-lg" siez="17"
+                                                <input type="text" class="form-control form-control-lg" siez="17"
                                                        placeholder="1234 5678 9012 3457" minlength="19" maxlength="19" />
                                                 <label class="form-label" for="typeText">Card Number</label>
                                             </div>
