--- a/src/main/resources/templates/client/shopping-page.html
+++ b/src/main/resources/templates/client/shopping-page.html
@@ -31,7 +31,7 @@
     <div class="row">
         <div class="col-md-3 my-3" th:each="product : ${productPage.content}">
             <div class="card d-flex flex-column h-100" th:each="img : ${product.productImageList}">
-                <img th:src="${img.path}" class="card-img-top" alt="...">
+                <img th:src="${img.path}" class="card-img-top" alt="..." loading="lazy">
                 <div class="card-body">
                     <h5 class="card-title" th:text="${product.name}"></h5>
                     <p class="card-text" th:text="${product.description}"></p>
@@ -39,9 +39,9 @@
                 <div class="mb-5 d-flex justify-content-around">
                     <h6 class="price p-2"
                         th:text="'Price: $' + ${productPriceService.getProductPriceRepository(product.id)}"></h6>
-                    <button class="btn btn-primary">
+                    <a class="btn btn-primary" th:href="@{/addToCart/{id}(id=${product.id})}">
                         <i class="fa-solid fa-cart-shopping"></i>
-                    </button>
+                    </a>
                 </div>
             </div>
         </div>
