add img for lab

--- a/src/main/resources/templates/components/navbar-shopping.html
+++ b/src/main/resources/templates/components/navbar-shopping.html
@@ -26,14 +26,9 @@
             <!-- Left links -->
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Dashboard</a>
+                    <a class="nav-link" th:href="@{/shopping}">Home</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Team</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Projects</a>
-                </li>
+
             </ul>
             <!-- Left links -->
         </div>
