--- a/src/main/resources/templates/components/component.html
+++ b/src/main/resources/templates/components/component.html
@@ -12,7 +12,7 @@
             class="fas fa-user-secret me-2"></i>Coders bite
     </div>
     <div class="list-group list-group-flush my-3">
-        <a th:href="@{/admin}" class="list-group-item list-group-item-action bg-transparent second-text active"><i
+        <a th:href="@{/admin/orders}" class="list-group-item list-group-item-action bg-transparent second-text active"><i
                 class="fas fa-tachometer-alt me-2"></i>Dashboard
         </a>
         <a th:href="@{/admin/customers}"
